# fastapi-orders-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
docker/: .env.example  Dockerfile  docker-compose.yml
logger/: formatters.py  handlers.py  logger.py
migrations/: README  env.py
migrations/versions/: 2838aac91ffb_add_user_email.py  8876d229fe00_1_mg.py  d1636278388a_init.py  d5497010e55e_init.py
src/: config.py  database.py  dependencies.py  exceptions.py  main.py  run_consumer.py
src/accounts/: config.py  dependencies.py  exceptions.py  models.py
src/accounts/repositories/: user.py
src/accounts/routers/: auth.py  registration.py  users.py
src/accounts/schemas/: __init__.py  token.py  user.py  user_with_orders.py
src/accounts/service/: auth.py  crud.py  db.py
src/accounts/services/: auth.py  crud.py  user.py
src/accounts/utils/: auth.py
src/kafka_service/: config.py  utils.py
src/kafka_service/consumer/: consumer.py  consumer_listener.py  consumer_run.py
src/kafka_service/producer/: producer.py  producer_run.py  producer_run_mock.py
src/notifications/: config.py  routers.py  schemas.py  service.py
src/order_processing/: notification.py  processing.py  service.py
src/orders/: dependencies.py  enums.py  models.py  repository.py  schemas.py  service.py
src/orders/routers/: orders.py
tests/: .test.example.env  config.py  conftest.py
tests/accounts/: test_auth.py  test_registration.py  test_users.py
tests/orders/: conftest.py  mocks.py  test_orders.py
(+8 files in other folders)
